syntax = "proto3";

package pb;

option go_package = "codev42-agent/pb";

service agentService {
  rpc generatePlan (GeneratePlanRequest) returns (GeneratePlanResponse);
  rpc implementPlan (ImplementPlanRequest) returns (ImplementPlanResponse);
}

message GeneratePlanRequest {
  string Prompt = 1;
  string ProjectId = 2;
  string Branch = 3;
}

message Annotation {
  string Name = 1;
  string Params = 2;
  string Returns = 3;
  string Description = 4;
}

message Plan {
  string ClassName = 1;
  repeated Annotation Annotations = 2;
}

message GeneratePlanResponse {
  string Language = 1;
  repeated Plan Plans = 2;
}

message ImplementPlanRequest {
  string Language = 1;
  repeated string Plans = 2;
}

message ImplementPlanResponse {
  repeated DevResult DevResults = 1;
}

message DevResult {
  string Description = 1;
  string Code = 2;
}

service CodeService {
  rpc saveCode(SaveCodeRequest) returns (SaveCodeResponse);
}

message SaveCodeRequest {
  string FilePath = 1;          
  string Code = 2;
}

message SaveCodeResponse {
  string status = 1;
}